--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "npm": "^8.19.2"
   },
   "dependencies": {
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "fp-ts": "^2.16.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.20.4",
+    "@types/eventsource": "^1.1.15",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.28.0",
